# pysparklines

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  spark.py
man/: sparkline.1
sparkline/: __init__.py  __main__.py  sparkline.py
tests/: test_guess.py  test_main.py  test_sparkline.py
