[metadata]
name = pysparklines
version = 1.4
description = pysparklines is a unicode sparkline generation library.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Brandon Whaley
author_email = redkrieg@gmail.com
url = https://github.com/RedKrieg/pysparklines
license = BSD 3-clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
platforms = any
python_requires = >=3.2

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    sparkline = sparkline:main

[options.extras_require]
test = pytest
